# PhysiCore

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .releaserc.json  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MECHANICAL_AGENT_DATA_TEST_SUMMARY.md  README.md  asan.supp  lsan.supp  sonar-project.properties  tsan-suppressions.txt  tsan.supp  vcpkg-configuration.json  vcpkg.json
.wiki/: Home.md  (+2 more)
X/: CMakeLists.txt
common/: CMakeLists.txt  process.h  types.h
common/include/: base_agent.h  base_agent_container.h  base_agent_data.h  base_agent_data_generic_storage.h  base_agent_generic_storage.h  base_agent_interface.h  componented_data.h  concepts.h  data_component.h  generic_agent_container.h  generic_agent_solver.h  process.h  types.h
common/include/common/: base_agent_generic_storage.h  base_agent_interface.h  cartesian_mesh.h  concepts.h  factory_registry.h  generic_agent_container.h  generic_agent_solver.h  random.h  registry.h  types.h  vtk_serializer_base.h
common/src/: base_agent.cpp  base_agent_container.cpp  base_agent_data.cpp  cartesian_mesh.cpp  random.cpp  vtk_serializer_base.cpp
common/tests/: CMakeLists.txt  test_base_agent.cpp  test_base_agent_container.cpp  test_base_agent_data.cpp
mechanics/micromechanics/: CMakeLists.txt
mechanics/micromechanics/include/: environment.h
mechanics/micromechanics/include/micromechanics/: agent.h  agent_container.h  agent_data.h  agent_generic_storage.h  cell.h  cell_data.h  cell_generic_storage.h  cell_interface.h  environment.h  potential_interface.h  simulation_parameters.h  solver.h  solver_registry.h  spatial_index.h  uniform_grid_spatial_index.h  vtk_mechanics_serializer.h
mechanics/micromechanics/kernels/openmp_solver/: CMakeLists.txt
mechanics/micromechanics/kernels/openmp_solver/src/: basement_membrane_solver.cpp  basement_membrane_solver.h  force_solver.cpp  force_solver.h  motility_solver.cpp  motility_solver.h  neighbor_solver.cpp  neighbor_solver.h  openmp_solver.cpp  openmp_solver.h  position_solver.cpp  position_solver.h  register_solver.cpp  spring_solver.cpp  spring_solver.h
mechanics/micromechanics/kernels/openmp_solver/tests/: CMakeLists.txt
mechanics/micromechanics/src/: cell_data.cpp  environment.cpp  simulation_parameters.cpp  solver_registry_sole.cpp  uniform_grid_spatial_index.cpp  vtk_mechanics_serializer.cpp
mechanics/micromechanics/tests/: CMakeLists.txt  test_agent.cpp  test_agent_container.cpp  test_agent_data.cpp  test_cell_data.cpp  test_environment.cpp  test_potentials.cpp  test_solver.cpp  test_solver_registry.cpp  test_spatial_index.cpp
mechanics/physicell/: CMakeLists.txt
mechanics/physicell/include/: environment.h
mechanics/physicell/include/physicell/: agent_data.h  agent_interface.h  environment.h  mechanical_agent.h  mechanical_agent_container.h  mechanical_parameters.h  physicell_export.h  serializer.h  simulations_parameters.h  solver.h  solver_registry.h  vtk_agents_serializer.h  vtk_serializer_base.h
mechanics/physicell/kernels/openmp_solver/: CMakeLists.txt
mechanics/physicell/kernels/openmp_solver/src/: cell_forces.cpp  cell_neighbors.cpp  common_solver.cpp  common_solver.h  openmp_solver.cpp  openmp_solver.h  position_solver.cpp  position_solver.h  register_solver.cpp  solver_helper.h
mechanics/physicell/kernels/openmp_solver/tests/: CMakeLists.txt  test_openmp_solver.cpp  test_solve_pair.cpp  test_update_cell_forces.cpp  test_update_cell_neighbors.cpp
mechanics/physicell/src/: agent_data.cpp  config_reader.cpp  config_reader.h  environment.cpp  mechanical_agent.cpp  solver_registry.cpp  vtk_agents_serializer.cpp  vtk_serializer_base.cpp
mechanics/physicell/tests/: .clang-tidy  CMakeLists.txt  test_config_reader.cpp  test_environment.cpp  test_mechanical_agent.cpp  test_mechanical_agent_container.cpp  test_mechanical_agent_data.cpp  test_solver_registry.cpp  test_vtk_agents_serializer.cpp
mechanics/physicell/tests/fixtures/: PhysiCell_settings.xml
phenotype/physicore/: CMakeLists.txt
phenotype/physicore/src/: main.cpp
reactions-diffusion/biofvm/: CMakeLists.txt
reactions-diffusion/biofvm/cmake/: BioFVMConfig.cmake  BioFVMConfig.cmake.in  MyLibConfig.cmake
reactions-diffusion/biofvm/examples/: CMakeLists.txt  diffuse.cpp  settings.xml
reactions-diffusion/biofvm/include/: agent.h  agent_container.h  agent_data.h  agent_data_generic_storage.h  agent_generic_storage.h  agent_interface.h  bulk_functor.h  mesh.h  microenvironment.h  microenvironment_builder.h  serializer.h  solver.h  solver_registry.h  vtk_agents_serializer.h  vtk_serializer.h  vtk_serializer_base.h
reactions-diffusion/biofvm/include/biofvm/: agent.h  agent_container.h  agent_data.h  agent_data_generic_storage.h  agent_generic_storage.h  agent_interface.h  bulk_functor.h  mesh.h  microenvironment.h  microenvironment_builder.h  serializer.h  solver.h  solver_registry.h
reactions-diffusion/biofvm/kernels/: .clang-tidy
reactions-diffusion/biofvm/kernels/cpu_solver/: CMakeLists.txt
reactions-diffusion/biofvm/kernels/cpu_solver/examples/: CMakeLists.txt  benchmark.cpp
reactions-diffusion/biofvm/kernels/cpu_solver/include/: bulk_solver.h  cell_solver.h  cpu_solver.h  diffusion_solver.h  problem.h
reactions-diffusion/biofvm/kernels/openmp_solver/: .clang-tidy  CMakeLists.txt
reactions-diffusion/biofvm/kernels/thrust_solver/: CMakeLists.txt
reactions-diffusion/biofvm/src/: agent.cpp  agent_data.cpp  config_reader.cpp  config_reader.h  mesh.cpp  microenvironment.cpp  microenvironment_builder.cpp  solver_registry.cpp  solver_registry_attach.cpp  solver_registry_sole.cpp  vtk_agents_serializer.cpp  vtk_agents_serializer.h  vtk_serializer.cpp  vtk_serializer.h  vtk_serializer_base.cpp  vtk_serializer_base.h
reactions-diffusion/biofvm/tests/: CMakeLists.txt  test_agent.cpp  test_agent_container.cpp  test_agent_data.cpp  test_config_reader.cpp  test_dirichlet_modification.cpp  test_microenvironment.cpp  test_microenvironment_builder.cpp  test_solver_registry.cpp  test_vtk_agents_serializer.cpp  test_vtk_serializer.cpp
(+137 files in other folders)
